<resources>
    <string name="app_name">Keysight Student</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_close">Close</string>
    <string name="title_home">Home</string>
    <string name="title_blog">Blog</string>
    <string name="title_about">About</string>
    <string name="title_edu">Education</string>
    <string name="sends_them_to_the_keysight_website">Sends them to the keysight website</string>
    <string name="product_name">Product Name</string>
    <string name="error_occured">Error Occurred</string>
    <string name="txt_image_slider">txt_image_slider</string>
</resources>
