<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_close"
        android:icon="@drawable/arrow_back"
        android:title="@string/title_close" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_edu"
        android:icon="@drawable/school"
        android:title="@string/title_edu" />
    <item
        android:id="@+id/navigation_blog"
        android:icon="@drawable/message"
        android:title="@string/title_blog" />
    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/info"
        android:title="@string/title_about" />

</menu>
